// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerApp matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LayerApp
    classes={
      Object {
        "blue": "blue",
        "content": "content",
        "layerApp": "layerApp",
        "white": "white",
      }
    }
    fixed={false}
    theme="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Jss(SubHeader)
          center={undefined}
          fixed={false}
          left={undefined}
          right={undefined}
          theme="blue"
        />,
        <div
          className="content"
        />,
      ],
      "className": "layerApp blue",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": undefined,
          "fixed": false,
          "left": undefined,
          "right": undefined,
          "theme": "blue",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "content",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Jss(SubHeader)
            center={undefined}
            fixed={false}
            left={undefined}
            right={undefined}
            theme="blue"
          />,
          <div
            className="content"
          />,
        ],
        "className": "layerApp blue",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "center": undefined,
            "fixed": false,
            "left": undefined,
            "right": undefined,
            "theme": "blue",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "content",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LayerApp styles matches the snapshot 1`] = `
Object {
  "blue": Object {
    "background": "#ffffff",
  },
  "content": Object {
    "boxSizing": "border-box",
    "height": "calc(100% - 60px)",
    "left": "0",
    "paddingBottom": "50px",
    "paddingTop": "30px",
    "position": "absolute",
    "top": "60px",
    "width": "100%",
    "zIndex": "1",
  },
  "layerApp": Object {
    "boxSizing": "border-box",
    "fontFamily": "'Open Sans', sans-serif",
    "height": "100%",
    "left": "0",
    "overflow": "auto",
    "position": "fixed",
    "top": "0",
    "width": "100%",
  },
  "white": Object {
    "background": "#f7f7f7",
  },
}
`;

exports[`LayerAppJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(LayerApp)
    fixed={false}
    theme="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "blue": "LayerApp-blue-0-1-3",
        "content": "LayerApp-content-0-1-2",
        "layerApp": "LayerApp-layerApp-0-1-1",
        "white": "LayerApp-white-0-1-4",
      },
      "fixed": false,
      "theme": "blue",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "blue": "LayerApp-blue-0-1-3",
          "content": "LayerApp-content-0-1-2",
          "layerApp": "LayerApp-layerApp-0-1-1",
          "white": "LayerApp-white-0-1-4",
        },
        "fixed": false,
        "theme": "blue",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
